# openai-hackathon

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  coordinator.py  cost_agent.py  documentation_agent.py  github_agent.py  kubernetes_agent.py  network_agent.py  planning_agent.py  rca_agent.py  security_agent.py  storage_agent.py
backend/app/api/: __init__.py  agents.py  incidents.py  metrics.py  mock_routes.py  rca.py  websocket.py
backend/app/db/: __init__.py  database.py
backend/app/db/migrations/: README.md
backend/app/mcp/: __init__.py  client.py  github_mcp.py  jira_mcp.py  kubernetes_mcp.py  prometheus_mcp.py  slack_mcp.py
backend/app/models/: __init__.py  agent_run.py  incident.py  learning_case.py
backend/app/schemas/: __init__.py  agent.py  incident.py  rca.py
backend/app/services/: __init__.py  incident_service.py  learning_service.py  notification_service.py
docs/: agent-specifications.md  api-specification.yaml  architecture-design-document.md  business-model.md  database-schema.sql  demo-script.md  pitch-deck.html  prompt-engineering-guide.md
frontend/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/agents/: page.tsx
frontend/app/incidents/: page.tsx
frontend/app/incidents/[id]/: page.tsx
frontend/app/incidents/[id]/rca/: page.tsx
frontend/app/incidents/new/: page.tsx
frontend/app/learning/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/agents/: AgentCard.tsx
frontend/components/incidents/: AgentProgressFeed.tsx  IncidentCard.tsx  RCAReport.tsx
frontend/components/layout/: Header.tsx  Sidebar.tsx
frontend/components/ui/: SeverityBadge.tsx  StatusIndicator.tsx
frontend/lib/: api.ts  mock-data.ts  types.ts  utils.ts  websocket.ts
k8s/: configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
k8s/backend/: deployment.yaml  hpa.yaml  service.yaml
k8s/frontend/: deployment.yaml  hpa.yaml  service.yaml
k8s/monitoring/: grafana-dashboard.json  prometheus.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/rbac/: clusterrole.yaml  clusterrolebinding.yaml  serviceaccount.yaml
k8s/redis/: deployment.yaml  service.yaml
