[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-ai-backend"
version = "0.1.0"
description = "Atlas AI — Multi-Agent Incident Response and Root Cause Analysis Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atlas AI Team" }]

dependencies = [
  # Web framework
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "python-multipart>=0.0.9",

  # OpenAI
  "openai>=1.30.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.1",

  # Cache / pub-sub
  "redis[hiredis]>=5.0.4",

  # Settings & validation
  "pydantic>=2.7.1",
  "pydantic-settings>=2.2.1",

  # HTTP client
  "httpx>=0.27.0",
  "aiohttp>=3.9.5",

  # Observability
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.24.0",
  "opentelemetry-sdk>=1.24.0",
  "opentelemetry-exporter-otlp>=1.24.0",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
  "opentelemetry-instrumentation-redis>=0.45b0",
  "opentelemetry-instrumentation-httpx>=0.45b0",

  # PDF generation
  "reportlab>=4.2.0",
  "weasyprint>=62.0",

  # Vector / embeddings
  "pgvector>=0.3.2",
  "numpy>=1.26.4",

  # MCP / subprocess
  "anyio>=4.3.0",

  # Utilities
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "tenacity>=8.3.0",
  "structlog>=24.1.0",
  "python-dateutil>=2.9.0",
  "orjson>=3.10.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "factory-boy>=3.3.0",
  "ruff>=0.4.4",
  "mypy>=1.10.0",
  "pre-commit>=3.7.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"
